--- a/python_tasks/requirements.txt
+++ b/python_tasks/requirements.txt
@@ -2,13 +2,16 @@ anyio==4.9.0
 asgiref==3.9.0
 certifi==2025.7.14
 Django==5.2.4
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+packaging==25.0
 pillow==11.3.0
 pygame==2.6.1
 python-telegram-bot==22.3
 sniffio==1.3.1
 sqlparse==0.5.3
 tzdata==2025.2
+whitenoise==6.9.0
